--- a/REM/REM.csproj
+++ b/REM/REM.csproj
@@ -103,11 +103,17 @@
     <Compile Include="Animation\PageAnimation.cs" />
     <Compile Include="Animation\PageAnimations.cs" />
     <Compile Include="Animation\StoryboardHelpers.cs" />
+    <Compile Include="Controls\ContractView.xaml.cs">
+      <DependentUpon>ContractView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\EstateView.xaml.cs">
       <DependentUpon>EstateView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\EstateAgentRepresentation.xaml.cs">
       <DependentUpon>EstateAgentRepresentation.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\NumericUpDown.xaml.cs">
+      <DependentUpon>NumericUpDown.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\PersonView.xaml.cs">
       <DependentUpon>PersonView.xaml</DependentUpon>
@@ -118,7 +124,10 @@
     <Compile Include="Models\House.cs" />
     <Compile Include="Models\Apartment.cs" />
     <Compile Include="Models\EstateAgent.cs" />
+    <Compile Include="Interfaces\IContract.cs" />
     <Compile Include="Models\Person.cs" />
+    <Compile Include="Models\PurchaseContract.cs" />
+    <Compile Include="Models\TenancyContract.cs" />
     <Compile Include="Pages\ApplicationPage.cs" />
     <Compile Include="Pages\ContractsPage.xaml.cs">
       <DependentUpon>ContractsPage.xaml</DependentUpon>
@@ -126,6 +135,7 @@
     <Compile Include="Pages\EstateAgentsPage.xaml.cs">
       <DependentUpon>EstateAgentsPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ValueConverters\ContractToTextConverter.cs" />
     <Compile Include="ValueConverters\EstateTypeToTextConverter.cs" />
     <Compile Include="ValueConverters\HouseToVisibilityConverter.cs" />
     <Compile Include="ValueConverters\ApplicationPageValueConverter.cs" />
@@ -168,6 +178,12 @@
     <Compile Include="Helpers\ViewModelLocator.cs" />
     <Compile Include="Helpers\WindowResizer.cs" />
     <Compile Include="Helpers\WpfHelpers.cs" />
+    <Compile Include="Windows\CreatePurchaseContractDialog.xaml.cs">
+      <DependentUpon>CreatePurchaseContractDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\CreateTenancyContractDialog.xaml.cs">
+      <DependentUpon>CreateTenancyContractDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\CreateEditAgentDialog.xaml.cs">
       <DependentUpon>CreateEditAgentDialog.xaml</DependentUpon>
     </Compile>
@@ -180,11 +196,19 @@
     <Compile Include="Windows\CreatePersonDialog.xaml.cs">
       <DependentUpon>CreatePersonDialog.xaml</DependentUpon>
     </Compile>
+    <Page Include="Controls\ContractView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Controls\EstateView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Controls\EstateAgentRepresentation.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\NumericUpDown.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -263,6 +287,14 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Styles\Scroll.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\CreatePurchaseContractDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Windows\CreateTenancyContractDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
